css/style.css
/* ... */
.main-search input[type="text"]:focus {
	border-bottom: 2px solid #000000;
	color: rgb(0, 0, 0);
	outline: none;
}

.main-search input[placeholder] 					{ color: rgba(0, 0, 0, .3); }
.main-search input::-webkit-input-placeholder 		{ color: rgba(0, 0, 0, .3); }
.main-search input::-moz-placeholder 				{ color: rgba(0, 0, 0, .3); }
.main-search input:-moz-placeholder 				{ color: rgba(0, 0, 0, .3); }
.main-search input:-ms-input-placeholder 			{ color: rgba(0, 0, 0, .3); }

.main-search input[placeholder]:hover 					{ color: rgba(0, 0, 0, .6); }
.main-search input:hover::-webkit-input-placeholder		{ color: rgba(0, 0, 0, .6); }
.main-search input:hover::-moz-placeholder 				{ color: rgba(0, 0, 0, .6); }
.main-search input:hover:-moz-placeholder				{ color: rgba(0, 0, 0, .6); }
.main-search input:hover:-ms-input-placeholder			{ color: rgba(0, 0, 0, .6); }

.main-search input[placeholder]:focus 					{ color: rgba(0, 0, 0, 1); }
.main-search input:focus::-webkit-input-placeholder		{ color: rgba(0, 0, 0, 1); }
.main-search input:focus::-moz-placeholder 				{ color: rgba(0, 0, 0, 1); }
.main-search input:focus:-moz-placeholder				{ color: rgba(0, 0, 0, 1); }
.main-search input:focus:-ms-input-placeholder			{ color: rgba(0, 0, 0, 1); }

.main-search label[for="main_search_input"] {
	position: absolute;
	display: block;
	width: 16px;
	height: 16px;
	left: 4px;
	top: 50%;
	margin-top: -8px;
	background-image: url("../img/icons/search_icon.svg");
	background-repeat: no-repeat;
	background-position: left center;
	cursor: pointer;
}

.main-search button[type="submit"] {
	margin: 0;
	padding-top: 3.5px;
	padding-bottom: 5.5px;
	padding-left: 18px;
	padding-right: 18px;
	min-width: 85px;
	opacity: 0;

	font-family: "opensanslight", Arial, sans-serif;
	font-size: 15px;
	line-height: 36px;
	letter-spacing: .01em;

	color: black;
	border: 2px solid #000000;
	border-radius: 0;
	
	background-color: transparent;
}

.main-search input[type="text"]:focus ~ button[type="submit"] {
	opacity: 1;
}

.main-search button[type="submit"]:hover,
.main-search button[type="submit"]:focus,
.main-search button[type="submit"]:active 
{
	opacity: 1;
	outline: 0;
}

.main-search button[type="submit"]:hover {
	color: #ffffff;
	background-color: #000000;
}

.main-search button[type="submit"]:active  {
	color: rgba(255,255,255, .3);
	background-color: #000000;
}


.site-navigation {
	display: flex;
	align-items: center;
	min-height: 22px;
}

.site-navigation-item {
	min-height: 21.6px;
	line-height: 21.6px;
}

.site-navigation-item > a {
	font-family: "gilroyextrabold", Arial, sans-serif;
	font-size: 18px;
	line-height: 1.2;
	letter-spacing: .2em;

	text-transform: uppercase;
}

.site-navigation-delivery {
	width: 140px;
	margin-right: 18px;
	margin-left: auto;
}

.site-navigation-warranty {
	width: 140px;
}

.site-navigation-contacts {
	width: 140px;
	margin-left: 65px;
	text-align: right;
	margin-right: -.2em;
}

.site-navigation-catalog {
	position: relative;
}

.site-navigation-catalog .catalog {
	position: relative;
	width: 248px;
	padding-right: 28px;
}

.catalog-menu {
	display: flex;
	z-index: 1;
	position: absolute;
	width: 1160px;
	top: 100%;
	left: -59px;
	padding-left: 61px;
	padding-right: 60px;
	padding-top: 20px;
	padding-bottom: 34px;

	visibility: hidden;

	letter-spacing: .01em;
	line-height: 36px;

	background-color: #f7e296;
}

.catalog-menu li {
	display: flex;
	flex-direction: column;
	margin: 0;
	padding: 0;
}

.catalog-menu li:not(:last-of-type){
	margin-right: 19px;
}

.catalog-menu li:first-of-type {
	min-width: 220px;
}

.catalog-menu li:nth-of-type(2) {
	min-width: 180px;
}

.catalog-menu li:nth-of-type(3) {
	min-width: 160px;
}

.site-navigation li:hover .catalog-menu,
.site-navigation li:focus .catalog-menu,
.site-navigation .catalog:focus ~ .catalog-menu {
	visibility: visible;
}

/* вариант с двумя блоками под 90 градусов не проканал, прозрачность при пересечении дает другой цвет */

.site-navigation a.catalog::before {
	content: "";
	display: block;
	position: absolute;
	right: 0;
	top: 50%;
	margin-top: -8px;
	width: 16px;
	height: 16px;
	
	background-image: url("../img/icons/catalog_icon.svg");
	opacity: .3;
}

.button {
	display: inline-block;
	position: relative;
	padding-left: 13px;
	padding-right: 10px;
	padding-top: 10px;
	padding-bottom: 9px;

	
	min-width: 260px;
	max-width: 100%;
	min-height: 40px;
	
	z-index: 1;	
	
	font-family: "gilroyextrabold", Arial, sans-serif;
	font-size: 18px;
	line-height: 1.2;
	letter-spacing: .2em;
	text-align: center;
	color: rgb(0, 0, 0);
	text-transform: uppercase;

	background-color: transparent;
	border: none;
	border-radius: 0;
	outline: 0;
}

.button:hover,
.button:focus {
	cursor: pointer;
}

.button::before{
	display: block;
	position: absolute;
	content: "";
	margin: auto 0;
    z-index: -1;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
	height: 8px;

	transition-property: height;
	transition-duration: 200ms;
	transition-delay: 20ms;
	
	cursor: pointer;
	background-color: #f0c52e;
}

.button:hover::before,
.button:focus::before {
	height: 100%;
}

.button:active {
	color: rgba(0, 0, 0, .3);
	outline: 0;
}

/* ============== INDEX PROMO ============== */

.promo {
	position: relative;
	margin-top: -125px;
	margin-bottom: 94px;
}

.promo input[type="radio"] {
	display: none;
}

.promo-slider-controls,
.promo-list {
	margin: 0;
	padding: 0;
	list-style: none;
}

.promo-list {
	padding-right: 59px;
}

.promo-slider-controls {
	display: flex;
	justify-content: space-between;
	position: absolute;
	width: 78px;
	height: 12px;

	top: 341px;
	right: 83px;
	z-index: 1;
}

.promo-slider-controls li {
	width: 12px;
	margin: 0;
}

.promo-slider-controls label {
	display: block;
	width: 12px;
	height: 12px;

	font-size: 0;
	background-size: contain;
	background-image: url("../img/promo/slider_button_empty.svg");
	background-position: center;
	background-repeat: no-repeat;

	cursor: pointer;
}
/* ... */

